--- a/WoWLauncher/App.config
+++ b/WoWLauncher/App.config
@@ -25,6 +25,30 @@
             <setting name="GameVersion" serializeAs="String">
                 <value>Classic</value>
             </setting>
+            <setting name="ChangeSkinWithVersion" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SkinRetail" serializeAs="String">
+                <value>dragonflight</value>
+            </setting>
+            <setting name="SkinClassic" serializeAs="String">
+                <value>wrathofthelichking2</value>
+            </setting>
+            <setting name="SkinClassicEra" serializeAs="String">
+                <value>vanilla</value>
+            </setting>
+            <setting name="SkinPtr" serializeAs="String">
+                <value>dragonflight</value>
+            </setting>
+            <setting name="SkinXptr" serializeAs="String">
+                <value>dragonflight</value>
+            </setting>
+            <setting name="SkinClassicPtr" serializeAs="String">
+                <value>wrathofthelichking2</value>
+            </setting>
+            <setting name="SkinClassicEraPtr" serializeAs="String">
+                <value>vanilla</value>
+            </setting>
         </WoWRetroLauncher.Properties.Settings>
     </userSettings>
 </configuration>
